[package]
name = "pixelflut-client"
version = "1.0.2"
authors = ["ColinTimBarndt <colin.barndt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.3", features=["rt", "rt-multi-thread", "net", "io-util", "time", "signal", "sync", "fs"]}
gif = "0.11"
clap = {version="2.33", features=["yaml"]}
hyper = {version="0.14", features=["http1", "http2", "client", "stream"]}
hyper-tls = "0.5"
futures = "0.3"